# ruisseau

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-ci.yml  python-ci.yml  release.yml
examples/: example_dag.py  example_dag_with_cycle.py
ruisseau/: __init__.py  cli.py  dag.py  executor.py  results.py  task.py
ruisseau/io/: paths.py
tests/: test_cli_no_command.py  test_cli_parser.py  test_cli_run.py  test_cli_validate.py  test_dag_correct.py  test_dag_errors.py  test_executor.py  test_results_dag.py  test_results_task.py
