# pyproject.toml
# Central configuration for Ruisseau
# (PEPs: 518, 621, 660)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruisseau"
version = "0.2.0"
description = "A minimalist DAG runner for local workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Stefan Waterval", email = "deagle74@example.com" }]
dependencies = []

[project.scripts]
ruisseau = "ruisseau.cli:main"

[tool.hatch.build.targets.wheel]
# Package lives in ruisseau/ruisseau/, not under src/
packages = ["ruisseau"]

# -----------------------------
# Ruff configuration
# -----------------------------
[tool.ruff]
line-length = 88
target-version = "py310"
lint.extend-select = ["I"]
exclude = [".venv", "dist", "build", "__pycache__", ".ruff_cache"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102"] # ignore missing docstrings in tests

# -----------------------------
# Mypy configuration
# -----------------------------
[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
ignore_missing_imports = true
exclude = "tests"

# -----------------------------
# Pytest configuration
# -----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
